<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.LoginActivity" >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@id/login_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/login_user_img"
        android:src="@drawable/ic_user_img" />

    <EditText
        android:id="@+id/login_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/login_hint"
        android:inputType="numberPassword"
        android:textStyle="bold"
        android:textAlignment="center"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:text="@string/login" />

</RelativeLayout>